// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`capability axis — a capability turning on changes exactly the commands its enabledWhen names > which commands each capability turns on, derived from the registry's enabledWhen — update deliberately 1`] = `
{
  "costs.by": [
    "costs",
  ],
  "costs.snapshot": [
    "costs",
  ],
  "delivery.report": [
    "github",
  ],
  "friction.propose": [
    "runHistory",
  ],
  "friction.report": [
    "runHistory",
  ],
  "mcp.add": [
    "mcp",
  ],
  "mcp.connect": [
    "mcp",
  ],
  "mcp.list": [
    "mcp",
  ],
  "mcp.promote": [
    "mcp",
  ],
  "mcp.remove": [
    "mcp",
  ],
  "mcp.show": [
    "mcp",
  ],
  "memory.forget": [
    "memory",
  ],
  "memory.list": [
    "memory",
  ],
  "repo.build": [
    "execution",
    "residents",
  ],
  "repo.list": [
    "residents",
  ],
  "repo.offboard": [
    "residents",
  ],
  "repo.onboard": [
    "residents",
  ],
  "repo.rebuild": [
    "residents",
  ],
  "repo.reconfigure": [
    "residents",
  ],
  "repo.test": [
    "execution",
    "residents",
  ],
  "review.abridge": [
    "runHistory",
    "readingDiffAbridge",
  ],
  "runs.findings": [
    "runHistory",
  ],
  "schedule.list": [
    "schedules",
  ],
}
`;

exports[`capability surfaces — cloud-full > CLI catalogue 1`] = `
"usage: switchboard <group> <verb> [args…] [--option value…] [--json]
       switchboard <group> <verb> --help
       switchboard ask [--thread <key>] "[agent:name] [model:provider/model] your request"
       switchboard start                            (the bot: Slack from the installation's .env and config/)
       switchboard init [--option value…]          (= setup init: the installer)
       switchboard help

commands:
  help show            — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
  help commands        — Every chat command by group, the grammar, and the per-request directives.
  status show          — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
  config show          — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
  config overrides     — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
  config channels      — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
  config set           — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
  config clear         — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
  config instructions  — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
  runs list            — List runs (live and persisted, newest first) — metadata only, never message text.
  runs get             — One run's record, its cost in dollars per model (or unpriced) included; \`--include messages\` adds its events with free text wrapped as untrusted content.
  runs events          — A page of one run's events after \`--after-seq\` (server-capped); free text wrapped as untrusted content.
  runs friction        — One run's friction diagnosis (live: computed now; persisted: as stored).
  runs stop            — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
  runs unit            — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
  runs children        — The runs one run spawned — a conductor's children, live and finished — oldest started first.
  runs findings        — A pull request's findings ledger — every review finding by id with its severity, where it was raised, what the coding run recorded against it and whether the next review agreed — read from the run records alone.
  runs search          — Search one session's log — a thread's conversation on one agent, every run of it — for words: the matching turns in relevance order, each with its run; snippets wrapped as untrusted content.
  review abridge       — Abridge a finished PR review's reading diff with meat.dev on the bot host (one Opus-class call) and store it on the run; idempotent — a stored one is answered, not recomputed.
  friction report      — Ranked recurring friction patterns across recent runs — read-only, GitHub never consulted.
  friction propose     — Run the self-improvement step: cluster recent friction, dedupe against open issues, file the top proposals as labeled issues.
  friction analyze     — Read-only friction diagnosis of a saved run-event stream (JSONL or an SSE capture) — the former frictionCli.
  repo list            — Every onboarded resident repo with its live state, ref, sha, last refresh, and disk gauge.
  repo onboard         — Onboard a repo as an always-warm resident environment (provisions billable compute; admin-gated).
  repo offboard        — Tear down a resident repo: registry record, schedules, container, R2 snapshots (admin-gated; --dry-run plans only).
  repo reconfigure     — Change a resident's default branch and/or command table (admin-gated; takes effect on the next refresh/attach).
  repo rebuild         — Discard a resident's snapshot and reprovision it from scratch (admin-gated; --dry-run plans only).
  repo test            — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  repo build           — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  memory list          — Your own memory records and the shared org / repo / channel records, with ids — what influences your runs.
  memory forget        — Soft-delete one memory record so it no longer influences any run (yours freely; shared org/repo/channel records need repo-management rights).
  mcp list             — External MCP servers your runs in this channel can use — org-wide, this channel's, and your own — with state and agents; never a credential. \`--all\` (admins): every tier.
  mcp add              — Register an external MCP server for yourself, this channel, or the org — auth is detected from the server; sign-in or a token happens on a one-time link, never in chat.
  mcp connect          — A fresh one-time link to sign in to an OAuth server or enter (or replace) a bearer server's token — only you can complete it; it expires in 10 minutes.
  mcp show             — One MCP server's entry plus a live probe of the tools it offers (names, read-only flags); never a credential.
  mcp remove           — Remove an MCP server you added and its stored credential (yours freely; channel ones need channel-config rights, org-wide ones admin rights).
  mcp promote          — Re-issue a person's MCP server in the org tier (admins): the same name, URL and auth, added by you; a bearer/oauth server gets a fresh org connect link for you to complete — the person's credential is never copied.
  schedule list        — Every scheduled job (cron, UTC), which Worker fires it, its next firing, and what its last firing did.
  deploy plan          — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why.
  deploy all           — Deploy production in the one supported order (memory → bot → resident → sandbox), waiting out preflights and each live gate — the bot's drain, the sandbox's image rollout and an \`echo ok\` probe — until the new containers are live. In \`registry\` mode it first copies the release's images its Workers lack into the account registry (what \`deploy images\` does). --affected deploys only the Workers whose inputs changed since what they serve — the release deploy.
  deploy restart       — Restart the bot container without an image build — how a rotated bot secret goes live (~30 s): refused while runs are in flight (waited out, then failed by name); done once /healthz answers with a later startedAt.
  deploy init          — Render every Worker's wrangler.jsonc from the wrangler.template.jsonc beside it and the deployment profile, and the project's docs site's from project.json — generated files, never hand-edited. --check compares without writing (the \`deploy:check\` gate).
  deploy secrets       — Put a Worker's secrets from the deployment profile's secretsSource (a directory of <NAME> files, or an op://Vault/Item): every name deploy/secrets.manifest.json lists for it, refused before any upload when a required value is absent. Values ride stdin into \`wrangler secret put\`; none is ever printed.
  deploy config        — Push the bot's config to the state Worker as the \`base\` document the bot reads at startup — from the profile's configSource (or --source), validated first. The running container keeps its config until \`deploy restart\`.
  deploy images        — Copy the release's bot, resident and sandbox images from where the release published them into this account's Cloudflare registry — once per version, skipping any already there — so \`registry\`-mode Workers deploy without a build and every container starts from Cloudflare's own cached registry. A registry-to-registry transfer over HTTPS: needs CLOUDFLARE_API_TOKEN with Containers Edit, nothing else.
  env bootstrap        — Populate the agent's execution environment with a downstream service's UAT env vars from 1Password (dry-run unless --apply).
  setup init           — The one-command installer: write .env (mode 600) and config/config.yaml from the checked-in examples with the values given — flags first, prompts only on a terminal — and, with --cloudflare and --zone, deploy/profile.json plus every Worker's wrangler.jsonc; then load the config and say what is on and what to run next. Refuses to overwrite without --force; --dry-run writes nothing and previews with secrets masked, existing files or not.
  contract render      — Render one plan unit's child contract — its section, the spec rows it names with their proof bindings, the repository's agent rules, the guards — as the \`## Contract\` block a coding prompt carries, and measure it.
  delivery report      — Delivery indicators per week and per unit — issue-to-merge time, first-pass CI, review rounds, findings and the share resolved with no human edit — from the repository's snapshot of GitHub's facts (--fresh reads GitHub now) and the run history; nothing written.
  costs by             — What the runs cost by user, thread, channel, agent or model over the range — LLM from their tokens through the price table, cloud allocated by run wall-clock — the costs page's tabs as text or JSON, from the snapshot; nothing written.
  costs snapshot       — Take the costs snapshot now: read both billing sources and the run history once over the page's widest range, store the result, and serve it to every reader of the costs page from then on.
  artifacts lifecycle  — Apply the artifacts bucket's lifecycle rules from config.yaml — objects expire after \`artifacts.retentionDays\` (default 30), incomplete multipart uploads abort after one day — and read them back; \`--dry-run\` prints the rules and touches nothing. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Edit, never the bot's token.
  artifacts check      — Report whether the artifacts bucket is private: its managed r2.dev domain must be disabled and no custom domain enabled — the two ways R2 serves a bucket without a signature. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Read, never the bot's token."
`;

exports[`capability surfaces — cloud-full > HTTP catalogue: the /api/<id> routes that answer an admin 1`] = `
[
  "config.channels",
  "config.clear",
  "config.instructions",
  "config.overrides",
  "config.set",
  "config.show",
  "costs.by",
  "costs.snapshot",
  "delivery.report",
  "deploy.plan",
  "friction.propose",
  "friction.report",
  "help.commands",
  "help.show",
  "mcp.add",
  "mcp.connect",
  "mcp.list",
  "mcp.promote",
  "mcp.remove",
  "mcp.show",
  "memory.forget",
  "memory.list",
  "repo.build",
  "repo.list",
  "repo.offboard",
  "repo.onboard",
  "repo.rebuild",
  "repo.reconfigure",
  "repo.test",
  "review.abridge",
  "runs.children",
  "runs.events",
  "runs.findings",
  "runs.friction",
  "runs.get",
  "runs.list",
  "runs.search",
  "runs.stop",
  "runs.unit",
  "schedule.list",
  "status.show",
]
`;

exports[`capability surfaces — cloud-full > MCP tools/list names 1`] = `
[
  "config_channels",
  "config_clear",
  "config_instructions",
  "config_overrides",
  "config_set",
  "config_show",
  "costs_by",
  "costs_snapshot",
  "delivery_report",
  "deploy_plan",
  "dispatch",
  "friction_propose",
  "friction_report",
  "help_commands",
  "help_show",
  "mcp_add",
  "mcp_connect",
  "mcp_list",
  "mcp_promote",
  "mcp_remove",
  "mcp_show",
  "memory_forget",
  "memory_list",
  "repo_build",
  "repo_list",
  "repo_offboard",
  "repo_onboard",
  "repo_rebuild",
  "repo_reconfigure",
  "repo_test",
  "review_abridge",
  "runs_children",
  "runs_events",
  "runs_findings",
  "runs_friction",
  "runs_get",
  "runs_list",
  "runs_search",
  "runs_stop",
  "runs_unit",
  "schedule_list",
  "status_show",
]
`;

exports[`capability surfaces — cloud-full > help commands on chat 1`] = `
"*Per-request directives* (anywhere in the message):
\`agent:review model:anthropic/claude-opus-5 effort:low budget:20 look at PR 42\` (effort: low | medium | high — lower = faster turns; budget: whole minutes — narrows this run's wall clock, never widens it; a budget too short for a turn plus the write-up is refused by name)

*Commands* (\`<group> <verb> [args…] [--option value…]\`; \`<group> help\` lists a group, \`<group> <verb> --help\` explains one):
*help*
• \`help show\` — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
• \`help commands\` — Every chat command by group, the grammar, and the per-request directives.
*status*
• \`status show\` — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
*config*
• \`config show\` — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
• \`config overrides\` — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
• \`config channels\` — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
• \`config set\` — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
• \`config clear\` — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
• \`config instructions\` — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
*runs*
• \`runs list\` — List runs (live and persisted, newest first) — metadata only, never message text.
• \`runs stop\` — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
• \`runs unit\` — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
• \`runs children\` — The runs one run spawned — a conductor's children, live and finished — oldest started first.
• \`runs findings\` — A pull request's findings ledger — every review finding by id with its severity, where it was raised, what the coding run recorded against it and whether the next review agreed — read from the run records alone.
*review*
• \`review abridge\` — Abridge a finished PR review's reading diff with meat.dev on the bot host (one Opus-class call) and store it on the run; idempotent — a stored one is answered, not recomputed.
*friction*
• \`friction report\` — Ranked recurring friction patterns across recent runs — read-only, GitHub never consulted.
• \`friction propose\` — Run the self-improvement step: cluster recent friction, dedupe against open issues, file the top proposals as labeled issues.
*repo*
• \`repo list\` — Every onboarded resident repo with its live state, ref, sha, last refresh, and disk gauge.
• \`repo onboard\` — Onboard a repo as an always-warm resident environment (provisions billable compute; admin-gated).
• \`repo offboard\` — Tear down a resident repo: registry record, schedules, container, R2 snapshots (admin-gated; --dry-run plans only).
• \`repo reconfigure\` — Change a resident's default branch and/or command table (admin-gated; takes effect on the next refresh/attach).
• \`repo rebuild\` — Discard a resident's snapshot and reprovision it from scratch (admin-gated; --dry-run plans only).
• \`repo test\` — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
• \`repo build\` — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
*memory*
• \`memory list\` — Your own memory records and the shared org / repo / channel records, with ids — what influences your runs.
• \`memory forget\` — Soft-delete one memory record so it no longer influences any run (yours freely; shared org/repo/channel records need repo-management rights).
*mcp*
• \`mcp list\` — External MCP servers your runs in this channel can use — org-wide, this channel's, and your own — with state and agents; never a credential. \`--all\` (admins): every tier.
• \`mcp add\` — Register an external MCP server for yourself, this channel, or the org — auth is detected from the server; sign-in or a token happens on a one-time link, never in chat.
• \`mcp connect\` — A fresh one-time link to sign in to an OAuth server or enter (or replace) a bearer server's token — only you can complete it; it expires in 10 minutes.
• \`mcp show\` — One MCP server's entry plus a live probe of the tools it offers (names, read-only flags); never a credential.
• \`mcp remove\` — Remove an MCP server you added and its stored credential (yours freely; channel ones need channel-config rights, org-wide ones admin rights).
• \`mcp promote\` — Re-issue a person's MCP server in the org tier (admins): the same name, URL and auth, added by you; a bearer/oauth server gets a fresh org connect link for you to complete — the person's credential is never copied.
*schedule*
• \`schedule list\` — Every scheduled job (cron, UTC), which Worker fires it, its next firing, and what its last firing did.
*deploy*
• \`deploy plan\` — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why.
*delivery*
• \`delivery report\` — Delivery indicators per week and per unit — issue-to-merge time, first-pass CI, review rounds, findings and the share resolved with no human edit — from the repository's snapshot of GitHub's facts (--fresh reads GitHub now) and the run history; nothing written.
*costs*
• \`costs by\` — What the runs cost by user, thread, channel, agent or model over the range — LLM from their tokens through the price table, cloud allocated by run wall-clock — the costs page's tabs as text or JSON, from the snapshot; nothing written.
• \`costs snapshot\` — Take the costs snapshot now: read both billing sources and the run history once over the page's widest range, store the result, and serve it to every reader of the costs page from then on."
`;

exports[`capability surfaces — cloud-full > self-description block (the resident cap is the Worker's answer — 6 where there is a fleet) 1`] = `
"About Switchboard (yourself): you are Switchboard, the agent gateway of the acme organization. A message arrives on a channel (Slack — an @-mention, thread follow-ups stay on the same agent — plus a CLI, an HTTP /api and an MCP surface), is routed to an agent, runs on a configured provider/model, and executes tools through an executor.
Agents: \`general\` — Default assistant: answers directly, reads URLs, manages issues; the preset for any question the org's GitHub answers. No workspace or shell.; \`coding\` — Implements changes and ships PRs (git + gh in a workspace).; \`review\` — Reviews PRs and produces high-quality findings. Read-only.; \`ship\` — Coding → review → fix pipeline to LGTM: opens the PR, loops reviews, reports merge-ready. Never merges.; \`research\` — Answers questions that need the web (search, URL reading); GitHub for context, not for a question GitHub alone answers. No workspace.; \`explore\` — Read-only investigation of a repository in a cold sandbox: runs builds, suites and pipelines, searches the web, and reports a claim table with commands and numbers. Never opens a PR; cannot attach or post files.; \`conductor\` — Coordinates other runs: spawns child runs as the requester — each in a thread of its own, under their permissions — follows them, and reports. No workspace or shell.. Users pick one with an inline \`agent:<name>\` directive (default: general); \`model:\` / \`effort:\` ride the same way (see the runtime-config block).
Repos: the coding and review agents work in a "resident" — an always-warm per-repo environment (a mirror clone, installed deps, a built checkout, refreshed on a schedule and snapshotted) on the resident Worker; each run attaches a worktree on its branch in seconds. An admin onboards a repo with \`repo onboard <owner/name>\` (install/build/test commands are detected from the repo root, \`--install/--build/--test\` override), sees the fleet with \`repo list\`, changes it with \`repo reconfigure\` / \`repo rebuild\` / \`repo offboard\`; the fleet is capped at 6 residents (\`--evict-coldest\` frees a slot). There is no separate "priority repos" setting: onboarded = warm. Repos that are not onboarded run in a cold per-thread workspace.
Runs and memory: every run (agent or operator command) has a live page under /runs with its events, kept as run history; runs can be stopped from there. Cross-session memory is per org/repo/channel/user (\`memory list\` / \`memory forget\`). \`help\` lists every chat command.
Source of truth: the code lives in the GitHub repo coreplanelabs/switchboard — README.md (architecture + agents), AGENTS.md (invariants + map), and one behavioral spec per feature under docs/reference/specs/*.md (e.g. docs/reference/specs/resident-repos.md, docs/reference/specs/routing-and-config.md, docs/reference/specs/github-tools.md). For a question about how Switchboard works beyond this block, read those files with the GitHub tools when you have them (github_tree / github_file on coreplanelabs/switchboard) — they are private, so a public-web fetch 404s; if you have no GitHub tools, answer from this block and point at that path. Never describe yourself as stateless, tool-less by design, or unable to know your own workings."
`;

exports[`capability surfaces — cloud-full > web seeds: /runs (capabilities, retention sentence) and /runs/scheduled (schedules, firing store) 1`] = `
{
  "capabilities": {
    "costs": true,
    "dashboardAuth": "access",
    "execution": "cloudflare",
    "github": true,
    "ingress": true,
    "mcp": true,
    "memory": true,
    "readingDiffAbridge": true,
    "residents": true,
    "runHistory": true,
    "runLedger": true,
    "schedules": true,
  },
  "runs": {
    "retention": "Finished runs are kept for 30 days, then deleted",
    "retentionDays": 30,
    "rows": 0,
  },
  "scheduled": {
    "firingsUnavailable": null,
    "schedules": [
      "self-improvement",
      "resident-watchdog",
    ],
  },
}
`;

exports[`capability surfaces — local-full > CLI catalogue 1`] = `
"usage: switchboard <group> <verb> [args…] [--option value…] [--json]
       switchboard <group> <verb> --help
       switchboard ask [--thread <key>] "[agent:name] [model:provider/model] your request"
       switchboard start                            (the bot: Slack from the installation's .env and config/)
       switchboard init [--option value…]          (= setup init: the installer)
       switchboard help

commands:
  help show            — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
  help commands        — Every chat command by group, the grammar, and the per-request directives.
  status show          — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
  config show          — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
  config overrides     — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
  config channels      — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
  config set           — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
  config clear         — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
  config instructions  — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
  runs list            — List runs (live and persisted, newest first) — metadata only, never message text.
  runs get             — One run's record, its cost in dollars per model (or unpriced) included; \`--include messages\` adds its events with free text wrapped as untrusted content.
  runs events          — A page of one run's events after \`--after-seq\` (server-capped); free text wrapped as untrusted content.
  runs friction        — One run's friction diagnosis (live: computed now; persisted: as stored).
  runs stop            — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
  runs unit            — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
  runs children        — The runs one run spawned — a conductor's children, live and finished — oldest started first.
  runs findings        — A pull request's findings ledger — every review finding by id with its severity, where it was raised, what the coding run recorded against it and whether the next review agreed — read from the run records alone.
  runs search          — Search one session's log — a thread's conversation on one agent, every run of it — for words: the matching turns in relevance order, each with its run; snippets wrapped as untrusted content.
  friction report      — Ranked recurring friction patterns across recent runs — read-only, GitHub never consulted.
  friction propose     — Run the self-improvement step: cluster recent friction, dedupe against open issues, file the top proposals as labeled issues.
  friction analyze     — Read-only friction diagnosis of a saved run-event stream (JSONL or an SSE capture) — the former frictionCli.
  repo test            — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  repo build           — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  memory list          — Your own memory records and the shared org / repo / channel records, with ids — what influences your runs.
  memory forget        — Soft-delete one memory record so it no longer influences any run (yours freely; shared org/repo/channel records need repo-management rights).
  mcp list             — External MCP servers your runs in this channel can use — org-wide, this channel's, and your own — with state and agents; never a credential. \`--all\` (admins): every tier.
  mcp add              — Register an external MCP server for yourself, this channel, or the org — auth is detected from the server; sign-in or a token happens on a one-time link, never in chat.
  mcp connect          — A fresh one-time link to sign in to an OAuth server or enter (or replace) a bearer server's token — only you can complete it; it expires in 10 minutes.
  mcp show             — One MCP server's entry plus a live probe of the tools it offers (names, read-only flags); never a credential.
  mcp remove           — Remove an MCP server you added and its stored credential (yours freely; channel ones need channel-config rights, org-wide ones admin rights).
  mcp promote          — Re-issue a person's MCP server in the org tier (admins): the same name, URL and auth, added by you; a bearer/oauth server gets a fresh org connect link for you to complete — the person's credential is never copied.
  deploy plan          — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why.
  deploy all           — Deploy production in the one supported order (memory → bot → resident → sandbox), waiting out preflights and each live gate — the bot's drain, the sandbox's image rollout and an \`echo ok\` probe — until the new containers are live. In \`registry\` mode it first copies the release's images its Workers lack into the account registry (what \`deploy images\` does). --affected deploys only the Workers whose inputs changed since what they serve — the release deploy.
  deploy restart       — Restart the bot container without an image build — how a rotated bot secret goes live (~30 s): refused while runs are in flight (waited out, then failed by name); done once /healthz answers with a later startedAt.
  deploy init          — Render every Worker's wrangler.jsonc from the wrangler.template.jsonc beside it and the deployment profile, and the project's docs site's from project.json — generated files, never hand-edited. --check compares without writing (the \`deploy:check\` gate).
  deploy secrets       — Put a Worker's secrets from the deployment profile's secretsSource (a directory of <NAME> files, or an op://Vault/Item): every name deploy/secrets.manifest.json lists for it, refused before any upload when a required value is absent. Values ride stdin into \`wrangler secret put\`; none is ever printed.
  deploy config        — Push the bot's config to the state Worker as the \`base\` document the bot reads at startup — from the profile's configSource (or --source), validated first. The running container keeps its config until \`deploy restart\`.
  deploy images        — Copy the release's bot, resident and sandbox images from where the release published them into this account's Cloudflare registry — once per version, skipping any already there — so \`registry\`-mode Workers deploy without a build and every container starts from Cloudflare's own cached registry. A registry-to-registry transfer over HTTPS: needs CLOUDFLARE_API_TOKEN with Containers Edit, nothing else.
  env bootstrap        — Populate the agent's execution environment with a downstream service's UAT env vars from 1Password (dry-run unless --apply).
  setup init           — The one-command installer: write .env (mode 600) and config/config.yaml from the checked-in examples with the values given — flags first, prompts only on a terminal — and, with --cloudflare and --zone, deploy/profile.json plus every Worker's wrangler.jsonc; then load the config and say what is on and what to run next. Refuses to overwrite without --force; --dry-run writes nothing and previews with secrets masked, existing files or not.
  contract render      — Render one plan unit's child contract — its section, the spec rows it names with their proof bindings, the repository's agent rules, the guards — as the \`## Contract\` block a coding prompt carries, and measure it.
  delivery report      — Delivery indicators per week and per unit — issue-to-merge time, first-pass CI, review rounds, findings and the share resolved with no human edit — from the repository's snapshot of GitHub's facts (--fresh reads GitHub now) and the run history; nothing written.
  artifacts lifecycle  — Apply the artifacts bucket's lifecycle rules from config.yaml — objects expire after \`artifacts.retentionDays\` (default 30), incomplete multipart uploads abort after one day — and read them back; \`--dry-run\` prints the rules and touches nothing. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Edit, never the bot's token.
  artifacts check      — Report whether the artifacts bucket is private: its managed r2.dev domain must be disabled and no custom domain enabled — the two ways R2 serves a bucket without a signature. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Read, never the bot's token."
`;

exports[`capability surfaces — local-full > HTTP catalogue: the /api/<id> routes that answer an admin 1`] = `
[
  "config.channels",
  "config.clear",
  "config.instructions",
  "config.overrides",
  "config.set",
  "config.show",
  "delivery.report",
  "deploy.plan",
  "friction.propose",
  "friction.report",
  "help.commands",
  "help.show",
  "mcp.add",
  "mcp.connect",
  "mcp.list",
  "mcp.promote",
  "mcp.remove",
  "mcp.show",
  "memory.forget",
  "memory.list",
  "repo.build",
  "repo.test",
  "runs.children",
  "runs.events",
  "runs.findings",
  "runs.friction",
  "runs.get",
  "runs.list",
  "runs.search",
  "runs.stop",
  "runs.unit",
  "status.show",
]
`;

exports[`capability surfaces — local-full > MCP tools/list names 1`] = `
[
  "config_channels",
  "config_clear",
  "config_instructions",
  "config_overrides",
  "config_set",
  "config_show",
  "delivery_report",
  "deploy_plan",
  "dispatch",
  "friction_propose",
  "friction_report",
  "help_commands",
  "help_show",
  "mcp_add",
  "mcp_connect",
  "mcp_list",
  "mcp_promote",
  "mcp_remove",
  "mcp_show",
  "memory_forget",
  "memory_list",
  "repo_build",
  "repo_test",
  "runs_children",
  "runs_events",
  "runs_findings",
  "runs_friction",
  "runs_get",
  "runs_list",
  "runs_search",
  "runs_stop",
  "runs_unit",
  "status_show",
]
`;

exports[`capability surfaces — local-full > help commands on chat 1`] = `
"*Per-request directives* (anywhere in the message):
\`agent:review model:anthropic/claude-opus-5 effort:low budget:20 look at PR 42\` (effort: low | medium | high — lower = faster turns; budget: whole minutes — narrows this run's wall clock, never widens it; a budget too short for a turn plus the write-up is refused by name)

*Commands* (\`<group> <verb> [args…] [--option value…]\`; \`<group> help\` lists a group, \`<group> <verb> --help\` explains one):
*help*
• \`help show\` — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
• \`help commands\` — Every chat command by group, the grammar, and the per-request directives.
*status*
• \`status show\` — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
*config*
• \`config show\` — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
• \`config overrides\` — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
• \`config channels\` — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
• \`config set\` — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
• \`config clear\` — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
• \`config instructions\` — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
*runs*
• \`runs list\` — List runs (live and persisted, newest first) — metadata only, never message text.
• \`runs stop\` — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
• \`runs unit\` — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
• \`runs children\` — The runs one run spawned — a conductor's children, live and finished — oldest started first.
• \`runs findings\` — A pull request's findings ledger — every review finding by id with its severity, where it was raised, what the coding run recorded against it and whether the next review agreed — read from the run records alone.
*friction*
• \`friction report\` — Ranked recurring friction patterns across recent runs — read-only, GitHub never consulted.
• \`friction propose\` — Run the self-improvement step: cluster recent friction, dedupe against open issues, file the top proposals as labeled issues.
*repo*
• \`repo test\` — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
• \`repo build\` — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
*memory*
• \`memory list\` — Your own memory records and the shared org / repo / channel records, with ids — what influences your runs.
• \`memory forget\` — Soft-delete one memory record so it no longer influences any run (yours freely; shared org/repo/channel records need repo-management rights).
*mcp*
• \`mcp list\` — External MCP servers your runs in this channel can use — org-wide, this channel's, and your own — with state and agents; never a credential. \`--all\` (admins): every tier.
• \`mcp add\` — Register an external MCP server for yourself, this channel, or the org — auth is detected from the server; sign-in or a token happens on a one-time link, never in chat.
• \`mcp connect\` — A fresh one-time link to sign in to an OAuth server or enter (or replace) a bearer server's token — only you can complete it; it expires in 10 minutes.
• \`mcp show\` — One MCP server's entry plus a live probe of the tools it offers (names, read-only flags); never a credential.
• \`mcp remove\` — Remove an MCP server you added and its stored credential (yours freely; channel ones need channel-config rights, org-wide ones admin rights).
• \`mcp promote\` — Re-issue a person's MCP server in the org tier (admins): the same name, URL and auth, added by you; a bearer/oauth server gets a fresh org connect link for you to complete — the person's credential is never copied.
*deploy*
• \`deploy plan\` — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why.
*delivery*
• \`delivery report\` — Delivery indicators per week and per unit — issue-to-merge time, first-pass CI, review rounds, findings and the share resolved with no human edit — from the repository's snapshot of GitHub's facts (--fresh reads GitHub now) and the run history; nothing written."
`;

exports[`capability surfaces — local-full > self-description block (the resident cap is the Worker's answer — 6 where there is a fleet) 1`] = `
"About Switchboard (yourself): you are Switchboard, the agent gateway of the acme organization. A message arrives on a channel (Slack — an @-mention, thread follow-ups stay on the same agent — plus a CLI, an HTTP /api and an MCP surface), is routed to an agent, runs on a configured provider/model, and executes tools through an executor.
Agents: \`general\` — Default assistant: answers directly, reads URLs, manages issues; the preset for any question the org's GitHub answers. No workspace or shell.; \`coding\` — Implements changes and ships PRs (git + gh in a workspace).; \`review\` — Reviews PRs and produces high-quality findings. Read-only.; \`ship\` — Coding → review → fix pipeline to LGTM: opens the PR, loops reviews, reports merge-ready. Never merges.; \`research\` — Answers questions that need the web (search, URL reading); GitHub for context, not for a question GitHub alone answers. No workspace.; \`explore\` — Read-only investigation of a repository in a cold sandbox: runs builds, suites and pipelines, searches the web, and reports a claim table with commands and numbers. Never opens a PR; cannot attach or post files.; \`conductor\` — Coordinates other runs: spawns child runs as the requester — each in a thread of its own, under their permissions — follows them, and reports. No workspace or shell.. Users pick one with an inline \`agent:<name>\` directive (default: general); \`model:\` / \`effort:\` ride the same way (see the runtime-config block).
Repos: this installation has no resident (always-warm) repo environments — the coding and review agents clone the repository a request names (an https://github.com/owner/name URL or a PR link) into a per-thread workspace on the bot host for the run. Nothing is kept warm between runs, and there is nothing to onboard.
Runs and memory: every run (agent or operator command) has a live page under /runs with its events, kept as run history; runs can be stopped from there. Cross-session memory is per org/repo/channel/user (\`memory list\` / \`memory forget\`). \`help\` lists every chat command.
Source of truth: the code lives in the GitHub repo coreplanelabs/switchboard — README.md (architecture + agents), AGENTS.md (invariants + map), and one behavioral spec per feature under docs/reference/specs/*.md (e.g. docs/reference/specs/resident-repos.md, docs/reference/specs/routing-and-config.md, docs/reference/specs/github-tools.md). For a question about how Switchboard works beyond this block, read those files with the GitHub tools when you have them (github_tree / github_file on coreplanelabs/switchboard) — they are private, so a public-web fetch 404s; if you have no GitHub tools, answer from this block and point at that path. Never describe yourself as stateless, tool-less by design, or unable to know your own workings."
`;

exports[`capability surfaces — local-full > web seeds: /runs (capabilities, retention sentence) and /runs/scheduled (schedules, firing store) 1`] = `
{
  "capabilities": {
    "costs": false,
    "dashboardAuth": "none",
    "execution": "local",
    "github": true,
    "ingress": true,
    "mcp": true,
    "memory": true,
    "readingDiffAbridge": false,
    "residents": false,
    "runHistory": true,
    "runLedger": false,
    "schedules": false,
  },
  "runs": {
    "retention": "Finished runs are kept for 30 days, then deleted",
    "retentionDays": 30,
    "rows": 0,
  },
  "scheduled": {
    "firingsUnavailable": "schedules.worker is not configured",
    "schedules": [
      "self-improvement",
      "resident-watchdog",
    ],
  },
}
`;

exports[`capability surfaces — minimal > CLI catalogue 1`] = `
"usage: switchboard <group> <verb> [args…] [--option value…] [--json]
       switchboard <group> <verb> --help
       switchboard ask [--thread <key>] "[agent:name] [model:provider/model] your request"
       switchboard start                            (the bot: Slack from the installation's .env and config/)
       switchboard init [--option value…]          (= setup init: the installer)
       switchboard help

commands:
  help show            — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
  help commands        — Every chat command by group, the grammar, and the per-request directives.
  status show          — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
  config show          — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
  config overrides     — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
  config channels      — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
  config set           — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
  config clear         — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
  config instructions  — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
  runs list            — List runs (live and persisted, newest first) — metadata only, never message text.
  runs get             — One run's record, its cost in dollars per model (or unpriced) included; \`--include messages\` adds its events with free text wrapped as untrusted content.
  runs events          — A page of one run's events after \`--after-seq\` (server-capped); free text wrapped as untrusted content.
  runs friction        — One run's friction diagnosis (live: computed now; persisted: as stored).
  runs stop            — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
  runs unit            — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
  runs children        — The runs one run spawned — a conductor's children, live and finished — oldest started first.
  runs search          — Search one session's log — a thread's conversation on one agent, every run of it — for words: the matching turns in relevance order, each with its run; snippets wrapped as untrusted content.
  friction analyze     — Read-only friction diagnosis of a saved run-event stream (JSONL or an SSE capture) — the former frictionCli.
  repo test            — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  repo build           — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
  deploy plan          — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why.
  deploy all           — Deploy production in the one supported order (memory → bot → resident → sandbox), waiting out preflights and each live gate — the bot's drain, the sandbox's image rollout and an \`echo ok\` probe — until the new containers are live. In \`registry\` mode it first copies the release's images its Workers lack into the account registry (what \`deploy images\` does). --affected deploys only the Workers whose inputs changed since what they serve — the release deploy.
  deploy restart       — Restart the bot container without an image build — how a rotated bot secret goes live (~30 s): refused while runs are in flight (waited out, then failed by name); done once /healthz answers with a later startedAt.
  deploy init          — Render every Worker's wrangler.jsonc from the wrangler.template.jsonc beside it and the deployment profile, and the project's docs site's from project.json — generated files, never hand-edited. --check compares without writing (the \`deploy:check\` gate).
  deploy secrets       — Put a Worker's secrets from the deployment profile's secretsSource (a directory of <NAME> files, or an op://Vault/Item): every name deploy/secrets.manifest.json lists for it, refused before any upload when a required value is absent. Values ride stdin into \`wrangler secret put\`; none is ever printed.
  deploy config        — Push the bot's config to the state Worker as the \`base\` document the bot reads at startup — from the profile's configSource (or --source), validated first. The running container keeps its config until \`deploy restart\`.
  deploy images        — Copy the release's bot, resident and sandbox images from where the release published them into this account's Cloudflare registry — once per version, skipping any already there — so \`registry\`-mode Workers deploy without a build and every container starts from Cloudflare's own cached registry. A registry-to-registry transfer over HTTPS: needs CLOUDFLARE_API_TOKEN with Containers Edit, nothing else.
  env bootstrap        — Populate the agent's execution environment with a downstream service's UAT env vars from 1Password (dry-run unless --apply).
  setup init           — The one-command installer: write .env (mode 600) and config/config.yaml from the checked-in examples with the values given — flags first, prompts only on a terminal — and, with --cloudflare and --zone, deploy/profile.json plus every Worker's wrangler.jsonc; then load the config and say what is on and what to run next. Refuses to overwrite without --force; --dry-run writes nothing and previews with secrets masked, existing files or not.
  contract render      — Render one plan unit's child contract — its section, the spec rows it names with their proof bindings, the repository's agent rules, the guards — as the \`## Contract\` block a coding prompt carries, and measure it.
  artifacts lifecycle  — Apply the artifacts bucket's lifecycle rules from config.yaml — objects expire after \`artifacts.retentionDays\` (default 30), incomplete multipart uploads abort after one day — and read them back; \`--dry-run\` prints the rules and touches nothing. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Edit, never the bot's token.
  artifacts check      — Report whether the artifacts bucket is private: its managed r2.dev domain must be disabled and no custom domain enabled — the two ways R2 serves a bucket without a signature. Operator-side: CLOUDFLARE_API_TOKEN with Workers R2 Storage: Read, never the bot's token."
`;

exports[`capability surfaces — minimal > HTTP catalogue: the /api/<id> routes that answer an admin 1`] = `
[
  "config.channels",
  "config.clear",
  "config.instructions",
  "config.overrides",
  "config.set",
  "config.show",
  "deploy.plan",
  "help.commands",
  "help.show",
  "repo.build",
  "repo.test",
  "runs.children",
  "runs.events",
  "runs.friction",
  "runs.get",
  "runs.list",
  "runs.search",
  "runs.stop",
  "runs.unit",
  "status.show",
]
`;

exports[`capability surfaces — minimal > MCP tools/list names 1`] = `
[
  "config_channels",
  "config_clear",
  "config_instructions",
  "config_overrides",
  "config_set",
  "config_show",
  "deploy_plan",
  "dispatch",
  "help_commands",
  "help_show",
  "repo_build",
  "repo_test",
  "runs_children",
  "runs_events",
  "runs_friction",
  "runs_get",
  "runs_list",
  "runs_search",
  "runs_stop",
  "runs_unit",
  "status_show",
]
`;

exports[`capability surfaces — minimal > help commands on chat 1`] = `
"*Per-request directives* (anywhere in the message):
\`agent:review model:anthropic/claude-opus-5 effort:low budget:20 look at PR 42\` (effort: low | medium | high — lower = faster turns; budget: whole minutes — narrows this run's wall clock, never widens it; a budget too short for a turn plus the write-up is refused by name)

*Commands* (\`<group> <verb> [args…] [--option value…]\`; \`<group> help\` lists a group, \`<group> <verb> --help\` explains one):
*help*
• \`help show\` — How to ask in plain words: describe what you want, force an agent, change a route in the thread.
• \`help commands\` — Every chat command by group, the grammar, and the per-request directives.
*status*
• \`status show\` — Which build this process runs: version, commit, when it was built and started, runs in flight, draining.
*config*
• \`config show\` — The effective agent/model/effort for you in this channel, the defaults, both scopes, and what is restricted; without a channel (a browser, a token, the CLI), your settings outside any channel.
• \`config overrides\` — Which channels carry a scope (a config.yaml block or a runtime override) and which settings each one names — never a value; \`config show --channel <id>\` reads one.
• \`config channels\` — The channels you may pick settings or MCP servers for, by name: the channels the bot is in that you may read, plus any that already carry a scope; \`listed: false\` says the bot could not list its channels and only the scoped ones are here.
• \`config set\` — Set the agent, model, effort, harness or boundary for a channel (gated) or for yourself; per-agent forms take --models.<agent> / --efforts.<agent> / --harness.<agent>, the boundary's axes --boundary.<axis> (a boundary caps every run in the scope and never grants).
• \`config clear\` — Drop every runtime override of a channel (gated) or of yourself; static config.yaml values show through again.
• \`config instructions\` — Custom instructions for a channel (gated) or for yourself — advisory prompt content that never changes agent, model, or permissions.
*runs*
• \`runs list\` — List runs (live and persisted, newest first) — metadata only, never message text.
• \`runs stop\` — Request a live run to stop (\`--mode soft\` = finish the current step; \`hard\` = abort now). Records the caller as the actor.
• \`runs unit\` — A ship unit's runs in round order — its coding thread's and its review thread's, live and finished, each with its round and thread — from one read.
• \`runs children\` — The runs one run spawned — a conductor's children, live and finished — oldest started first.
*repo*
• \`repo test\` — Run the repo's onboarded test command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
• \`repo build\` — Run the repo's onboarded build command with zero model turns (needs coding-agent access; the ref must be a plausible branch).
*deploy*
• \`deploy plan\` — The production deploy plan: checks, Worker order, preflight handling — computed, nothing executed. With --affected, also which Workers this tree actually needs deployed and why."
`;

exports[`capability surfaces — minimal > self-description block (the resident cap is the Worker's answer — 6 where there is a fleet) 1`] = `
"About Switchboard (yourself): you are Switchboard, the agent gateway of the acme organization. A message arrives on a channel (Slack — an @-mention, thread follow-ups stay on the same agent — plus a CLI and an HTTP /api surface), is routed to an agent, runs on a configured provider/model, and executes tools through an executor.
Agents: \`general\` — Default assistant: answers directly, reads URLs, manages issues; the preset for any question the org's GitHub answers. No workspace or shell.; \`coding\` — Implements changes and ships PRs (git + gh in a workspace).; \`review\` — Reviews PRs and produces high-quality findings. Read-only.; \`ship\` — Coding → review → fix pipeline to LGTM: opens the PR, loops reviews, reports merge-ready. Never merges.; \`research\` — Answers questions that need the web (search, URL reading); GitHub for context, not for a question GitHub alone answers. No workspace.; \`explore\` — Read-only investigation of a repository in a cold sandbox: runs builds, suites and pipelines, searches the web, and reports a claim table with commands and numbers. Never opens a PR; cannot attach or post files.; \`conductor\` — Coordinates other runs: spawns child runs as the requester — each in a thread of its own, under their permissions — follows them, and reports. No workspace or shell.. Users pick one with an inline \`agent:<name>\` directive (default: general); \`model:\` / \`effort:\` ride the same way (see the runtime-config block).
Repos: this installation has no resident (always-warm) repo environments — the coding and review agents clone the repository a request names (an https://github.com/owner/name URL or a PR link) into a per-thread workspace on the bot host for the run. Nothing is kept warm between runs, and there is nothing to onboard.
Runs: every run (agent or operator command) has a live page under /runs with its events while it runs (this installation keeps no run history: a finished run's page goes away about a minute later); runs can be stopped from there. This installation has no cross-session memory: a run knows only its own thread. \`help\` lists every chat command.
Source of truth: the code lives in the GitHub repo coreplanelabs/switchboard — README.md (architecture + agents), AGENTS.md (invariants + map), and one behavioral spec per feature under docs/reference/specs/*.md (e.g. docs/reference/specs/resident-repos.md, docs/reference/specs/routing-and-config.md, docs/reference/specs/github-tools.md). For a question about how Switchboard works beyond this block, read those files with the GitHub tools when you have them (github_tree / github_file on coreplanelabs/switchboard) — they are private, so a public-web fetch 404s; if you have no GitHub tools, answer from this block and point at that path. Never describe yourself as stateless, tool-less by design, or unable to know your own workings."
`;

exports[`capability surfaces — minimal > web seeds: /runs (capabilities, retention sentence) and /runs/scheduled (schedules, firing store) 1`] = `
{
  "capabilities": {
    "costs": false,
    "dashboardAuth": "none",
    "execution": "local",
    "github": false,
    "ingress": false,
    "mcp": false,
    "memory": false,
    "readingDiffAbridge": false,
    "residents": false,
    "runHistory": false,
    "runLedger": false,
    "schedules": false,
  },
  "runs": {
    "retention": "Run history is off; finished runs are kept about a minute.",
    "retentionDays": null,
    "rows": 0,
  },
  "scheduled": {
    "firingsUnavailable": "schedules.worker is not configured",
    "schedules": [
      "self-improvement",
      "resident-watchdog",
    ],
  },
}
`;

exports[`deploy plan — what \`deploy plan\` prints > a bot-only profile is a one-step plan with no state Worker to push the config to 1`] = `
"Root: /work/switchboard (a checkout)
Profile: deploy/profile.bot-only.json (example); config: config/config.yaml (no state Worker in the profile — not pushed anywhere)
Checks: wrangler account = 00000000000000000000000000000000; clean tree; HEAD == origin/main; node_modules present in every dir
Images: registry (version 1.2.3) — not probed (the example profile) — bot: registry.cloudflare.com/00000000000000000000000000000000/switchboard:1.2.3
WARNING profile: deploy/profile.bot-only.json is the EXAMPLE — this plan can be read, not deployed; write deploy/profile.json for a real installation
Steps:
  1. bot (switchboard) — deploy/cloudflare: npm run deploy — preflight (retry every 60s up to 10 min) — credential must pass \`wrangler containers list --json\` (Containers: Edit) — then wait until live (https://switchboard.example.com/healthz not draining + build.commit == HEAD)
     container shim — preflight refuses while runs are in flight; done only when the new container is live. A rotated bot secret needs no build: \`wrangler secret put\` alone leaves the running container on its old env — \`deploy restart\` restarts it on the current env
(dry run — nothing executed)"
`;

exports[`deploy plan — what \`deploy plan\` prints > the full example profile: every Worker, in the canonical order 1`] = `
"Root: /work/switchboard (a checkout)
Profile: deploy/profile.example.json (example); config: config/config.yaml → document "base" on https://switchboard-memory.example.com
Checks: wrangler account = 00000000000000000000000000000000; clean tree; HEAD == origin/main; node_modules present in every dir
Images: registry (version 1.2.3) — not probed (the example profile) — bot: registry.cloudflare.com/00000000000000000000000000000000/switchboard:1.2.3, resident: registry.cloudflare.com/00000000000000000000000000000000/switchboard-resident:1.2.3, sandbox: registry.cloudflare.com/00000000000000000000000000000000/switchboard-sandbox:1.2.3
WARNING profile: deploy/profile.example.json is the EXAMPLE — this plan can be read, not deployed; write deploy/profile.json for a real installation
Steps:
  1. memory (switchboard-memory) — deploy/cloudflare-memory: npm run deploy
     state Worker — DO migrations land before the bot writes to them
  2. bot (switchboard) — deploy/cloudflare: npm run deploy — preflight (retry every 60s up to 10 min) — credential must pass \`wrangler containers list --json\` (Containers: Edit) — then wait until live (https://switchboard.example.com/healthz not draining + build.commit == HEAD)
     container shim — preflight refuses while runs are in flight; done only when the new container is live. A rotated bot secret needs no build: \`wrangler secret put\` alone leaves the running container on its old env — \`deploy restart\` restarts it on the current env
  3. resident (switchboard-resident) — deploy/cloudflare-resident: npm run deploy — preflight (retry every 60s up to 30 min) — needs one of RESIDENT_ADMIN_TOKEN / RESIDENT_OPERATOR_TOKEN / RESIDENT_READ_TOKEN — credential must pass \`wrangler containers list --json\` (Containers: Edit) and \`wrangler r2 bucket list\` (Workers R2 Storage: Edit)
     per-repo DOs — preflight refuses while a resident has a run in flight or is provisioning (a refresh or restore mid-cycle only warns: it resumes after the swap)
  4. sandbox (switchboard-sandbox) — deploy/cloudflare-sandbox: npm run deploy — needs SANDBOX_TOKEN — credential must pass \`wrangler containers list --json\` (Containers: Edit) — then wait until live (https://switchboard-sandbox.example.com/healthz build.commit == HEAD + every running switchboard-sandbox-switchboardsandbox instance on the app version + an /exec probe answers ok from one)
     per-thread exec proxy — stateless per run; done only when the Worker serves the commit, every running container is on the new image and an \`echo ok\` probe answers from one
(dry run — nothing executed)"
`;
